🐞 fix: change slider  on bottom sheet

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_fonts: ^6.1.0
   lottie: ^2.7.0
   intl: ^0.18.1
+  fl_chart: ^0.65.0
 
 dev_dependencies:
   flutter_test:
